<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_background"
    tools:context=".fe.LoginActivity">

    <LinearLayout
        android:layout_width="361dp"
        android:layout_height="346dp"
        android:layout_margin="30dp"
        android:background="@color/white"
        android:elevation="5dp"
        android:maxWidth="400dp"
        android:minWidth="300dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/login_to_your_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:minHeight="48dp"
            android:padding="5dp" />

        <EditText
            android:id="@+id/login_pass_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:minHeight="50dp"
            android:padding="5dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            android:text="@string/login"
            android:textColor="@color/white" />


    </LinearLayout>

    <TextView
        android:id="@+id/login_back_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_back_button_symbol"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/login_back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_back_button"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>